header/in progress

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"></link>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet"></link>
+    <link rel="stylesheet" href="./styles/main.scss" ></link>
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__container">
+        <img
+        class="header__uni-name"
+        alt="NAMU"
+        src="images/NAMU.png"
+        >
+        </img>
+        <div class="header__menuToggle">
+          <input
+            type="checkbox"
+            id="menu-checkbox"
+            class="header__checkbox"
+          >
+          </input>
+          <label for="menu-checkbox" class="header__btn-menu">
+            <span class="header__btn-line"></span>
+            <span class="header__btn-line"></span>
+            <span class="header__btn-line"></span>
+          </label>
+          <select class="header__language-select"><option>UA</option></select>
+        </div>
+      </div>
+    </header>
+    <section class="section1">
+      <div class="section1__info-container">
+        <p class = "section1__date">10 серпня - 10 листопада</p>
+        <h1 class="section1__title">Мистецтво</h1>
+        <div class="section1__content-slider">
+          <p class="section1__title section1__years">ХІХ - ХХ ст.</p>
+        </div>
+        <div class="section1__content-slider2">
+          <p class="section1__sub-title">Внесок уркаїнських митців у світову культуру 19-20ст.</p>
+          <div class="section1__link-container">
+            <a
+              href="/"
+              alt="button-buy-tickets"
+              class="section1__link-buy-ticket"
+            >
+              Купити квиток
+            </a>
+          </div>
+        </div>
+        <div alt="Girl_from_Podolye_by_V.Tropinin" class="section1__img"></div>
+      </div>
+    </section>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
