--- a/src/index.html
+++ b/src/index.html
@@ -28,40 +28,48 @@
         <nav class="nav-top header__nav">
           <ul class="nav-top__list">
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Галерея</a>
+              <a href="#gallery" class="nav-top__link">Галерея</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Виставки та події</a>
+              <a href="#events" class="nav-top__link">Виставки та події</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Відвідування</a>
+              <a href="#lecture" class="nav-top__link">Відвідування</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Стати нашим другом</a>
+              <a href="#subscribe" class="nav-top__link">Стати нашим другом</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Про нас</a>
+              <a href="#contacts" class="nav-top__link">Про нас</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Магазин</a>
+              <a href="#gallery" class="nav-top__link">Магазин</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Блог</a>
+              <a href="#lecture" class="nav-top__link">Блог</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Контакти</a>
+              <a href="#contacts" class="nav-top__link">Контакти</a>
             </li>
           </ul>
         </nav>
 
-        <div class="header__search"></div>
+        <input
+          type="search"
+          name="search"
+          id="search"
+          placeholder="Пошук"
+          class="header__search-input"
+        >
+
+        <label for="search" class="header__search"></label>
       </div>
 
       <div class="logo header__logo--small"></div>
@@ -79,35 +87,35 @@
         <nav class="nav-top header__nav">
           <ul class="nav-top__list">
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Галерея</a>
+              <a href="#gallery" class="nav-top__link">Галерея</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Виставки та події</a>
+              <a href="#events" class="nav-top__link">Виставки та події</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Відвідування</a>
+              <a href="#lecture" class="nav-top__link">Відвідування</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Стати нашим другом</a>
+              <a href="#subscribe" class="nav-top__link">Стати нашим другом</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Про нас</a>
+              <a href="#contacts" class="nav-top__link">Про нас</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Магазин</a>
+              <a href="#gallery" class="nav-top__link">Магазин</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Блог</a>
+              <a href="#lecture" class="nav-top__link">Блог</a>
             </li>
 
             <li class="nav-top__item">
-              <a href="#" class="nav-top__link">Контакти</a>
+              <a href="#contacts" class="nav-top__link">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -134,21 +142,21 @@
           <div class="promo__info">
             <h1 class="promo__page-title">Худож<text class="promo__unfilled-text">ній</text> музей</h1>
 
-            <a href="#" class="promo__buy-link">
+            <a href="#subscribe" class="promo__buy-link">
               Квитки
               <div class="square promo__square square--green"></div>
             </a>
           </div>
 
           <div class="promo__decor">
-            <p class="promo__decor-title">Події</p>
+            <a href="#events" class="promo__decor-title">Події</a>
 
             <hr class="promo__decor-line">
           </div>
         </div>
       </section>
 
-      <section class="main__actual-info">
+      <section id="events" class="main__actual-info">
         <h2 class="main__actual-title">Актуальні події</h2>
 
         <div class="main__event-container">
@@ -217,7 +225,7 @@
         </div>
       </section>
 
-      <section class="main__lecture">
+      <section id="lecture" class="main__lecture">
         <img
           srcset="images/lecture-768.png 320w,
                   images/lecture-768.png 768w"
@@ -244,7 +252,7 @@
         </div>
       </section>
 
-      <section class="main__gallery">
+      <section id="gallery" class="main__gallery">
         <h2 class="main__gallery-title">Галерея</h2>
 
         <div class="main__gallery-img-holder">
@@ -316,7 +324,7 @@
         </div>
       </section>
 
-      <section class="main__subscribe">
+      <section id="subscribe" class="main__subscribe">
         <h2 class="main__subscribe-title">Підписка</h2>
 
         <p class="main__subscribe-description">
@@ -334,7 +342,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer id="contacts" class="footer">
       <div class="footer__container">
         <div class="footer__icons">
           <a href="#" class="footer__link">
@@ -407,37 +415,37 @@
 
               <div class="nav__list-left">
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Галерея</a>
+                  <a href="#gallery" class="nav__link">Галерея</a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Виставки та події</a>
+                  <a href="#events" class="nav__link">Виставки та події</a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Відвідування</a>
+                  <a href="#lecture" class="nav__link">Відвідування</a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Стати нашим другом</a>
+                  <a href="#subscribe" class="nav__link">Стати нашим другом</a>
                 </li>
               </div>
 
               <div class="nav__list-right">
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Про нас</a>
+                  <a href="#lecture" class="nav__link">Про нас</a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Магазин</a>
+                  <a href="#gallery" class="nav__link">Магазин</a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Блог</a>
+                  <a href="#lecture" class="nav__link">Блог</a>
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Контакти</a>
+                  <a href="#contacts" class="nav__link">Контакти</a>
                 </li>
               </div>
             </ul>
