--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,580 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      rel="shortcut icon"
+      href="images/favicon.ico"
+      type="image/x-icon"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;800&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="content-container">
+        <input
+          class="header__hamburger-input"
+          id="hamburger-menu"
+          type="checkbox"
+        >
+
+        <label
+          class="header__hamburger-toggler"
+          for="hamburger-menu"
+        >
+          <span class="header__hamburger-icon"></span>
+        </label>
+
+        <section class="header__menu menu">
+          <div class="content-container">
+            <div class="menu__top">
+              <div class="menu__logo logo">
+                <a href="#" class="logo__link">
+                  <img
+                    class="logo__img"
+                    src="images/logo.svg"
+                    alt="NA MU"
+                  >
+                </a>
+              </div>
+
+              <nav class="menu__nav nav">
+                <ul class="nav__list">
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Виставки та події
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Відвідування
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Стати нашим другом
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Магазин
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Блог
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="menu__content">
+              <h2 class="menu__heading content-heading">
+                Цього тижня
+              </h2>
+
+              <div class="menu__events">
+                <div class="menu__event">
+                  <div class="menu__picture">
+                    <a href="#" class="menu__link">
+                      <img
+                        class="menu__img"
+                        src="images/lection.png"
+                        alt="Event"
+                      >
+                    </a>
+                  </div>
+
+                  <div class="menu__text">
+                    <div class="menu__text-top">
+                      <h4 class="menu__subtitle subtitle-4">
+                        Лекція
+                      </h4>
+
+                      <span class="menu__date date-text">
+                        26/08/2019 - 11:00
+                      </span>
+                    </div>
+
+                    <h6 class="menu__title subtitle-6">
+                      Від класицизму до романтизму
+                    </h6>
+                  </div>
+                </div>
+
+                <div class="menu__event">
+                  <div class="menu__picture">
+                    <a href="#" class="menu__link">
+                      <img
+                        class="menu__img"
+                        src="images/event-1.png"
+                        alt="Event"
+                      >
+                    </a>
+                  </div>
+
+                  <div class="menu__text">
+                    <div class="menu__text-top">
+                      <h4 class="menu__subtitle subtitle-4">
+                        Виставка
+                      </h4>
+
+                      <span class="menu__date date-text">
+                        26.08-29.11.2019
+                      </span>
+                    </div>
+
+                    <h6 class="menu__title subtitle-6">
+                      Йду і повертаюсь
+                    </h6>
+                  </div>
+                </div>
+
+                <div class="menu__event">
+                  <div class="menu__picture">
+                    <a href="#" class="menu__link">
+                      <img
+                        class="menu__img"
+                        src="images/event-2.png"
+                        alt="Event"
+                      >
+                    </a>
+                  </div>
+
+                  <div class="menu__text">
+                    <div class="menu__text-top">
+                      <h4 class="menu__subtitle subtitle-4">
+                        Виставка
+                      </h4>
+
+                      <span class="menu__date date-text">
+                        26.08-29.11.2019
+                      </span>
+                    </div>
+
+                    <h6 class="menu__title subtitle-6">
+                      І спогади і мрії
+                    </h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <div class="header__top">
+          <div class="header__logo logo">
+            <a href="#" class="logo__link">
+              <img
+                class="logo__img"
+                src="images/logo.svg"
+                alt="NA MU"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="header__content">
+          <div class="header__bg"></div>
+
+          <h1 class="header__title">
+            Худож<span class="header__title--transparent">ній</span>
+            <br>
+            музей
+          </h1>
+
+          <button class="header__button button button--buy-btn">
+            <span class="button__text">Квитки</span>
+            <span class="header__arrow button__arrow"></span>
+          </button>
+        </div>
+
+        <h4 class="header__events">
+          <a class="header__events-link subtitle-4" href="#events">
+            Події
+          </a>
+        </h4>
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="section-container content-container" id="events">
+        <h2 class="content-heading">
+          Актуальні події
+        </h2>
+
+        <section class="events">
+          <section class=" events__event subsection-container">
+            <div class="events__picture">
+              <img
+                class="events__img"
+                src="images/event-1.png"
+                alt="Event 1"
+              >
+            </div>
+
+            <div class="events__content events__content--odd">
+              <div class="events__text">
+                <div class="events__heading">
+                  <h4 class="events__subtitle subtitle-4">
+                    Виставка
+                  </h4>
+                  <span class="events__date date-text">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+
+                <h3 class="events__title subtitle-3">
+                  Йду і повертаюсь
+                </h3>
+
+                <p class="events__description content-text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </section>
+
+          <section class="events__event subsection-container">
+            <div class="events__content events__content--even">
+              <div class="events__text">
+                <div class="events__heading">
+                  <h4 class="events__subtitle subtitle-4">
+                    Виставка
+                  </h4>
+                  <span class="events__date date-text">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+
+                <h3 class="events__title subtitle-3">
+                  І спогади і мрії
+                </h3>
+
+                <p class="events__description content-text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+
+            <div class="events__picture events__picture--even">
+              <img
+                class="events__img"
+                src="images/event-2.png"
+                alt="Event 2"
+              >
+            </div>
+          </section>
+        </section>
+      </section>
+
+      <section class="lection section-container">
+        <div class="lection__picture">
+          <img
+            class="lection__img"
+            src="images/lection.png"
+            alt="Lection picture"
+          >
+        </div>
+
+        <section class="lection__content content-container">
+          <div class="lection__text">
+            <div class="lection__heading">
+              <h4 class="lection__subtitle subtitle-4">
+                Лекція
+              </h4>
+              <span class="lection__date date-text">
+                26/08/2019 - 11:00
+              </span>
+            </div>
+
+            <h3 class="lection__title subtitle-3">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </section>
+      </section>
+
+      <section class="content-container section-container">
+        <h2 class="content-heading">
+          Галерея
+        </h2>
+
+        <section class="gallery subsection-container">
+          <input
+            class="gallery__input gallery__input--1"
+            id="gallery__input--1"
+            type="checkbox"
+            checked
+          >
+
+          <input
+            class="gallery__input gallery__input--2"
+            id="gallery__input--2"
+            type="checkbox"
+          >
+
+          <input
+            class="gallery__input gallery__input--3"
+            id="gallery__input--3"
+            type="checkbox"
+          >
+
+          <input
+            class="gallery__input gallery__input--4"
+            id="gallery__input--4"
+            type="checkbox"
+          >
+
+          <input
+            class="gallery__input gallery__input--5"
+            id="gallery__input--5"
+            type="checkbox"
+          >
+
+          <input
+            class="gallery__input gallery__input--6"
+            id="gallery__input--6"
+            type="checkbox"
+          >
+
+          <label
+            class="gallery__label gallery__label--1"
+            for="gallery__input--1"
+          >
+          </label>
+
+          <label
+            class="gallery__label gallery__label--2"
+            for="gallery__input--2"
+          >
+          </label>
+
+          <label
+            class="gallery__label gallery__label--3"
+            for="gallery__input--3"
+          >
+          </label>
+
+          <label
+            class="gallery__label gallery__label--4"
+            for="gallery__input--4"
+          >
+          </label>
+
+          <label
+            class="gallery__label gallery__label--5"
+            for="gallery__input--5"
+          >
+          </label>
+
+          <label
+            class="gallery__label gallery__label--6"
+            for="gallery__input--6"
+          >
+          </label>
+
+          <div class="gallery__pictures">
+            <img
+              class="gallery__img"
+              src="images/gallery-img-1.png"
+              alt="Gallery picture"
+            >
+
+            <img
+              class="gallery__img gallery__img--second-in-row"
+              src="images/gallery-img-2.png"
+              alt="Gallery picture"
+            >
+
+            <img
+              class="gallery__img gallery__img--last-in-row"
+              src="images/gallery-img-3.png"
+              alt="Gallery picture"
+            >
+
+            <img
+              class="gallery__img gallery__img--first-in-row"
+              src="images/gallery-img-4.png"
+              alt="Gallery picture"
+            >
+
+            <img
+              class="gallery__img"
+              src="images/gallery-img-5.png"
+              alt="Gallery picture"
+            >
+
+            <img
+              class="gallery__img gallery__img--last-in-row"
+              src="images/gallery-img-6.png"
+              alt="Gallery picture"
+            >
+
+            <div class="gallery__button-slider gallery__button-slider--minus gallery-btn--slide-minus"></div>
+            <div class="gallery__button-slider gallery__button-slider--plus gallery-btn--slide-plus"></div>
+          </div>
+
+          <button type="button" class="gallery__button button__arrow button__arrow--gallery-btn"></button>
+        </section>
+      </section>
+
+      <section class="subscription section-container">
+        <div class="subscription__picture">
+          <img
+            class="subscription__img"
+            src="images/subscription.png"
+            alt="Subscription picture"
+          >
+        </div>
+
+        <div class="subscription__content content-container">
+          <h2 class="subscription__heading content-heading">
+            Підписка
+          </h2>
+
+          <p class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            class="subscription__form"
+            action="#"
+            method="POST"
+          >
+            <input
+              class="subscription__email"
+              type="text"
+              name="email"
+              placeholder="E-mail"
+            >
+            <button type="button" class="subscription__button button__arrow button__arrow--subcr-btn"></button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__section content-container">
+        <div class="footer__networks">
+          <div class="footer__logo logo">
+            <a href="#" class="logo__link">
+              <img
+                class="logo__img"
+                src="images/logo.svg"
+                alt="NA MU"
+              >
+            </a>
+          </div>
+
+          <div class="footer__networks-links">
+            <a href="#" class="footer__fb">
+              <img
+                class="footer__img"
+                src="images/Facebook.png"
+                alt="Fb logo"
+              >
+            </a>
+
+            <a href="#" class="footer__inst">
+              <img
+                class="footer__img"
+                src="images/instagram-black.png"
+                alt="Instagram logo"
+              >
+            </a>
+          </div>
+        </div>
+
+        <div class="footer__content">
+          <div class="footer__schedule">
+            <div class="footer__working-hours">
+              <h5 class="footer__title subtitle-5">
+                Графік роботи
+              </h5>
+              <p class="footer__text">
+                <strong>12:00 — 20:00</strong> середа
+                <br>
+                <strong>12:00 — 20:00</strong> четвер
+                <br>
+                <strong>12:00 — 20:00</strong> п’ятниця
+                <br>
+                <strong>11:00 — 19:00</strong> субота
+                <br>
+                <strong>11:00 — 19:00</strong> неділя
+                <br>
+                <br>
+                Вихідні понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                <br>
+                до закриття музею
+              </p>
+            </div>
+
+            <div class="footer__contacts">
+              <h5 class="footer__title subtitle-5">
+                Контакти:
+              </h5>
+
+              <p class="footer__text">
+                вул. М. Грушевського, 6; Київ, 01001
+                <br>
+                тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+                <br>
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+          </div>
+
+          <div class="footer__menu">
+            <div class="footer__menu-column-1">
+              <a href="#" class="footer__menu-link">Галерея</a>
+              <a href="#" class="footer__menu-link">Виставки та події</a>
+              <a href="#" class="footer__menu-link">Відвідування</a>
+              <a href="#" class="footer__menu-link">Стати нашим другом</a>
+            </div>
+            <div class="footer__menu-column-2">
+              <a href="#" class="footer__menu-link">Про Нас</a>
+              <a href="#" class="footer__menu-link">Магазин</a>
+              <a href="#" class="footer__menu-link">Блог</a>
+              <a href="#" class="footer__menu-link">Контакти</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer__bottom">
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+
+          <p class="footer__designer">
+            Designed by Zhyriada Marina
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
