--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,51 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="container container__header">
+        <div class="header__top">
+          <a href="#">
+            <img
+              src="images/NAMU.png"
+              alt="NAMU logo"
+              class="header__logo"
+            >
+          </a>
+          <div class="header__menu">
+            <div class="header__burger-menu burger-menu">
+              <div class="burger-menu__icon">
+              </div>
+            </div>
+            <p class="header__lang">UA</p>
+          </div>
+        </div>
+        <div class="promo">
+          <p class="promo__date">10 серпня - 10 листопада</p>
+          <h1 class="promo__title">Мистецтво<br>
+            <span class="promo__title--translate">ХІХ - ХХ ст.</span>
+          </h1>
+          <p class="promo__subtitle">Внесок українських митців у світову культуру 19-20ст</p>
+          <button class="promo__button button">Купити квиток</button>
+          <p class="promo__date-bottom">
+            10.08 - 10.10
+            <span class="promo__line"></span>
+          </p>
+          <div class="promo__img-box">
+            <img
+              src="./images/header-girl.png"
+              alt="Дівчина з Поділля В. Тропінін"
+              class="promo__img"
+            >
+          </div>
+        </div>
+      </div>
+    </header>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
