--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="container">
+
+        <div class="header__top">
+          <img
+          class="header__logo"
+          src="./images/logo.svg"
+          alt=""
+          >
+          <div class="header__info">
+            <span class="header__lang">UA</span>
+          </div>
+        </div>
+
+        <div class="header__promo">
+          <input
+            class="checkbox"
+            type="checkbox"
+            id="checkox"
+            >
+          <label class="hamburger" for="checkox">
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
+          </label>
+
+          <div class="header__menu hidden">
+
+            <div class="hidden__info">
+              <p class="hidden__working-hours">
+                Розклад сьогодні:
+                <span class="hidden__details">12:00 - 19:00</span>
+              </p>
+              <p class="hidden__address">
+                Адреса:
+                <span class="hidden__details">Київ, вул. М. Грушевського, 6</span>
+              </p>
+            </div>
+
+            <div class="hidden__navbar">
+              <nav class="hidden__nav">
+                <ul class="hidden__nav-list">
+                  <li class="hidden__nav-item">
+                    <a href="#" class="hidden__nav-link">Спланувати візит</a>
+                  </li>
+                  <li class="hidden__nav-item">
+                    <a href="#" class="hidden__nav-link">Виставки та події</a>
+                  </li>
+                  <li class="hidden__nav-item">
+                    <a href="#" class="hidden__nav-link">Колекція</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="hidden__actions">
+              <button class="hidden__buy-btn">Купити квиток</button>
+              <button class="hidden__member-btn">Стати членом</button>
+            </div>
+
+            <div class="hidden__img-container"></div>
+          </div>
+
+          <div class="header__hero">
+            <div class="header__exhibition-info">
+              <p class="header__dates">10 серпня - 10 листопада</p>
+              <h1 class="header__title">
+                Мистецтво
+                <br>
+                <span class="header__shifted-title">ХІХ - ХХ ст.</span>
+              </h1>
+              <p class="header__desc">
+                Внесок українських митців у світову культуру 19-20ст
+              </p>
+              <button class="header__btn" type="submit">Купити квиток</button>
+            </div>
+            <div class="header__bottom-info">
+              <span class="header__bottom-dates">10.08 - 10.10</span>
+            </div>
+
+            <div class="header__img-container">
+              <p class="header__img-desc">Дівчина з Поділля В. Тропінін</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </header>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
