Changes after student review

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             <span class="promo__title--translate">ХІХ - ХХ ст.</span>
           </h1>
           <p class="promo__subtitle">Внесок українських митців у світову культуру 19-20ст</p>
-          <button class="promo__button button">Купити квиток</button>
+          <button class="promo__button">Купити квиток</button>
           <p class="promo__date-bottom">
             10.08 - 10.10
             <span class="promo__line"></span>
@@ -48,6 +48,8 @@
         </div>
       </div>
     </header>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
