Added working burger-menu

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,42 @@
             >
           </div>
         </div>
+        <div class="hidden-nav">
+          <div class="hidden-nav__box">
+            <p class="hidden-nav__timetable">
+              <span class="hidden-nav__tagline">Розклад сьогодні:</span>
+              12:00 - 19:00
+            </p>
+            <p class="hidden-nav__address">
+              <span class="hidden-nav__tagline">Адреса:</span>
+              Київ, вул. М. Грушевського, 6
+            </p>
+          </div>
+          <nav class="nav hidden-nav__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="" class="nav__link">Спланувати візит</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">Виставки та події</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">Колекція</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="hidden-nav__box hidden-nav__box--buttons">
+            <button class="hidden-nav__button">Купити квиток</button>
+            <button class="hidden-nav__button hidden-nav__button--transparent">Стати членом</button>
+          </div>
+          <div class="hidden-nav__img-box">
+            <img
+              src="./images/menu-boy.png"
+              alt="Boy with paints"
+              class="hidden-nav__img"
+            >
+          </div>
+        </div>
       </div>
     </header>
 
