--- a/src/index.html
+++ b/src/index.html
@@ -45,12 +45,20 @@
               <nav class="menu__nav nav">
                 <ul class="nav__list">
                   <li class="nav__item">
-                    <a href="#" class="nav__link">
+                    <a
+                      href="#gallery"
+                      class="nav__link"
+                      onclick="(() => {document.querySelector(`#hamburger-menu`).checked = false;})()"
+                    >
                       Галерея
                     </a>
                   </li>
                   <li class="nav__item">
-                    <a href="#" class="nav__link">
+                    <a
+                      href="#events"
+                      class="nav__link"
+                      onclick="(() => {document.querySelector(`#hamburger-menu`).checked = false;})()"
+                    >
                       Виставки та події
                     </a>
                   </li>
@@ -316,7 +324,7 @@
       </section>
 
       <section class="content-container section-container">
-        <h2 class="content-heading">
+        <h2 class="content-heading" id="gallery">
           Галерея
         </h2>
 
@@ -468,7 +476,8 @@
               name="email"
               placeholder="E-mail"
             >
-            <button type="button" class="subscription__button button__arrow button__arrow--subcr-btn"></button>
+
+            <button type="submit" class="subscription__button button__arrow button__arrow--subcr-btn"></button>
           </form>
         </div>
       </section>
