--- a/src/index.html
+++ b/src/index.html
@@ -475,6 +475,7 @@
               type="text"
               name="email"
               placeholder="E-mail"
+              pattern="[a-z0-9._%+-]+@[a-z0-9._-]+\.[a-z]{2,}$"
             >
 
             <button type="submit" class="subscription__button button__arrow button__arrow--subcr-btn"></button>
