--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,248 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    >
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <label class="header__menu"></label>
+      <h3 class="header__logo heading">
+        Na<br>
+        mu
+      </h3>
+      <img class="header__photo" src="images/header.jpg" alt="Natsionalnij hudozhnij muzej Ukrayini">
+      <div class="header__block">
+        <h1 class="header__heading heading">
+          Худож<span class="header__heading--trans">ній</span><br>
+          музей
+        </h1>
+        <div class="header__button text">
+          Квитки
+        </div>
+      </div>
+      <p class="header__vertical-text text">Події</p>
+    </header>
+
+    <main>
+      <section class="section">
+        <div class="exhibitions">
+          <h2 class="exhibitions__heading heading">
+            Актуальні події
+          </h2>
+          <div class="exhibitions__event">
+            <div class="exhibitions__event-photo-box">
+              <img
+                src="images/event1.png"
+                class="exhibitions__event-img"
+                alt="landscape">
+            </div>
+            <div class="exhibitions__event-info">
+              <div class="exhibitions__event-top">
+                <p class="exhibitions__event-class text">
+                  ВИСТАВКА
+                </p>
+                <p class="exhibitions__event-date text">
+                  26.08-29.11.2019
+                </p>
+              </div>
+              <h3 class="exhibitions__event-heading heading">
+                Йду і повертаюсь
+              </h3>
+              <p class="exhibitions__event-text text">
+                Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку
+                - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="exhibitions__event exhibitions__event--second">
+
+            <div class="exhibitions__event-info">
+              <div class="exhibitions__event-top">
+                <p class="exhibitions__event-class text">
+                  ВИСТАВКА
+                </p>
+                <p class="exhibitions__event-date text">
+                  26.08-29.11.2019
+                </p>
+              </div>
+              <h3 class="exhibitions__event-heading heading">
+                І спогади і мрії
+              </h3>
+              <p class="exhibitions__event-text text">
+                Національний художній музей України до 100 річчя від дня народження
+                видатної української художниці
+                Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+            <div class="exhibitions__event-photo-box exhibitions__event-photo-box--second">
+              <img
+                src="images/event2.png"
+                class="exhibitions__event-img"
+                alt="fire Bird">
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+      <section class="lectures">
+        <div class="lectures__photo"></div>
+        <div class="lectures__info">
+          <div class="lectures__top">
+            <div class="lectures__name text">ЛЕКЦІЯ</div>
+            <div class="lectures__date text">26/08/2019 - 11:00</div>
+          </div>
+          <div class="lectures__heading heading">Від класицизму до романтизму</div>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="gallery">
+          <div class="gallery__heading heading">Галерея</div>
+          <div class="gallery__photos">
+            <div class="gallery__photo" style="grid-area: photo1;">
+              <img
+                class="gallery__img"
+                src="images/photo1.png"
+                alt="two women">
+            </div>
+            <div class="gallery__photo" style="grid-area: photo2;">
+              <img
+                class="gallery__img"
+                src="images/photo2.png"
+                alt="village in winter">
+            </div>
+            <div class="gallery__photo" style="grid-area: photo3;">
+              <img
+                class="gallery__img"
+                src="images/photo3.png"
+                alt="in the garden">
+            </div>
+            <div class="gallery__photo" style="grid-area: photo4;">
+              <img
+                class="gallery__img"
+                src="images/photo4.png"
+                alt="at sea">
+            </div>
+          </div>
+          <div class="gallery__button-more"></div>
+        </div>
+      </section>
+
+      <section class="subscription">
+        <div class="subscription__heading heading">
+          Підписка
+        </div>
+        <div class="subscription__text text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+        <form
+          action="zarva6596@gmail.com"
+          method="dialog"
+          class="subscription__form"
+        >
+          <input
+            type="email"
+            class="subscription__email"
+            placeholder="E-mail">
+          <button class="subscription__button"></button>
+        </form>
+      </section>
+
+      <futer class="futer">
+        <div class="futer__top">
+          <div class="futer__left">
+            <div class="futer__icons">
+              <h3 class="futer__logo heading">
+                Na<br>
+                mu
+              </h3>
+              <div class="futer__social-icons">
+                <div class="facebook">
+                  <a href="#" class="futer__social-link">
+                    <img src="images/Facebook.svg" alt="Facebook-ion">
+                  </a>
+                </div>
+                <div class="instagram">
+                  <a href="#" class="futer__social-link">
+                    <img src="images/instagram (3).svg" alt="instagram-icon">
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="futer__timetable">
+              <h5 class="futer__timetable-heading text">Графік роботи</h5>
+              <p class="futer__timetable-text">
+                <span class="futer__timetable-time text">12:00 — 20:00</span> середа<br>
+                <span class="futer__timetable-time text">12:00 — 20:00</span> четвер<br>
+                <span class="futer__timetable-time text">12:00 — 20:00</span> п’ятниця<br>
+                <span class="futer__timetable-time text">11:00 — 19:00</span> субота<br>
+                <span class="futer__timetable-time text">11:00 — 19:00</span> неділя<br>
+              </p>
+              <p class="futer__timetable-text text">
+                Вихідні понеділок, вівторок <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+            </div>
+            <div class="futer__contacts">
+              <h5 class="futer__contacts-heading text">Контакти:</h5>
+              <p class="futer__contacts-text text">
+                вул. М. Грушевського, 6; Київ, 01001 <br>
+                тел. +38 (044) 278-13-57<br>
+                факс +38 (044) 278-74-54<br>
+                e-mail: info@namu.kiev.ua<br>
+              </p>
+            </div>
+          </div>
+          <div class="futer__center"></div>
+          <div class="futer__right">
+            <div class="futer__nav">
+              <ul class="futer__nav-list">
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Галерея</a>
+                </li>
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Виставки та події</a>
+                </li>
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Відвідування</a>
+                </li>
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Стати нашим другом</a>
+                </li>
+              </ul>
+            </div>
+            <div class="futer__nav">
+              <ul class="futer__nav-list">
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Про Нас</a>
+                </li >
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Магазин</a>
+                </li>
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Блог</a>
+                </li>
+                <li class="futer__nav-li">
+                  <a class="futer__link text" href="#">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="futer__bottom">
+          <p class="futer__bottom-left text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="futer__bottom-right text">Designed by Zhyriada Marina</p>
+        </div>
+      </futer>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
