--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,19 @@
   </head>
   <body>
     <header class="header">
-      <label class="header__menu"></label>
+      <label for="toggle" class="header__menu"></label>
+      <input
+        type="checkbox"
+        id="toggle"
+        class="header__toggle">
       <h3 class="header__logo heading">
         Na<br>
         mu
       </h3>
-      <img class="header__photo" src="images/header.jpg" alt="Natsionalnij hudozhnij muzej Ukrayini">
+      <img
+        class="header__photo"
+        src="images/header.jpg"
+        alt="Natsionalnij hudozhnij muzej Ukrayini">
       <div class="header__block">
         <h1 class="header__heading heading">
           Худож<span class="header__heading--trans">ній</span><br>
@@ -31,7 +38,7 @@
     </header>
 
     <main>
-      <section class="section">
+      <section id="exhibitions" class="section">
         <div class="exhibitions">
           <h2 class="exhibitions__heading heading">
             Актуальні події
@@ -110,25 +117,25 @@
         <div class="gallery">
           <div class="gallery__heading heading">Галерея</div>
           <div class="gallery__photos">
-            <div class="gallery__photo" style="grid-area: photo1;">
+            <div class="gallery__photo">
               <img
                 class="gallery__img"
                 src="images/photo1.png"
                 alt="two women">
             </div>
-            <div class="gallery__photo" style="grid-area: photo2;">
+            <div class="gallery__photo">
               <img
                 class="gallery__img"
                 src="images/photo2.png"
                 alt="village in winter">
             </div>
-            <div class="gallery__photo" style="grid-area: photo3;">
+            <div class="gallery__photo">
               <img
                 class="gallery__img"
                 src="images/photo3.png"
                 alt="in the garden">
             </div>
-            <div class="gallery__photo" style="grid-area: photo4;">
+            <div class="gallery__photo">
               <img
                 class="gallery__img"
                 src="images/photo4.png"
@@ -167,14 +174,14 @@
                 Na<br>
                 mu
               </h3>
-              <div class="futer__social-icons">
+              <div class="futer__-icons">
                 <div class="facebook">
-                  <a href="#" class="futer__social-link">
+                  <a href="#" class="futer__-link">
                     <img src="images/Facebook.svg" alt="Facebook-ion">
                   </a>
                 </div>
                 <div class="instagram">
-                  <a href="#" class="futer__social-link">
+                  <a href="#" class="futer__-link">
                     <img src="images/instagram (3).svg" alt="instagram-icon">
                   </a>
                 </div>
