--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,183 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <input type="checkbox"
+          class="header__checkbox check-menu"
+          id="nav-toggler">
+
+      <div class="header__container">
+        <label class="header__label" for="nav-toggler"></label>
+        <div class="header__burger-line header__burger-line_first"></div>
+        <div class="header__burger-line header__burger-line_second"></div>
+        <div class="header__burger-line header__burger-line_third"></div>
+        <div class="header__burger-line header__burger-line_fourth"></div>
+      </div>
+
+      <div class="header__menu menu">
+        <div class="menu__content">
+          <div class="menu__content-top">
+            <div class="menu__logo-nav">
+              <img class="menu__logo"
+                src="./images/NAMU.png"
+                alt="namu-logo">
+              <nav class="nav menu__nav ">
+                <ul class="nav__list">
+                  <li class="nav__item nav__item_active">
+                    <a class="nav__link" href="#">Галерея</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#about-us">Виставки та події</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#gallery">Відвідування</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#consultation">Стати нашим другом</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#testimonials">Про Нас</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#contacts">Магазин</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#contacts">Блог</a>
+                  </li>
+                  <li class="nav__item">
+                    <a class="nav__link" href="#contacts">Контакти</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="menu__search-label">
+              <img src="./images/search.png"
+                alt="search"
+                class="menu__search-icon">
+            </div>
+          </div>
+          <div class="menu__buttons">
+            <button class="menu__button menu__button_hours-n-tickets">години та квитки</button>
+            <button class="menu__button menu__button_visit">відвідати</button>
+          </div>
+          <button class="menu__buy-tickets">Купити квитки</button><!--
+          --><button class="menu__buy-arrow">→</button>
+
+          <div class="menu__bottom bottom">
+            <div class="bottom__first-block">
+              <div class="bottom__insta">
+                <img src="./images/NAMUsmaller.png"
+                  alt="logo"
+                  class="bottom__logo">
+                <img src="./images/Group 2.png" alt="medias">
+              </div>
+              <div class="bottom__nav-first">
+                <ul class="bottom__navlist">
+                  <li class="bottom__navitem">
+                    <a href="#" class="bottom__link">Галерея</a>
+                  </li>
+                  <li>
+                    <a href="#" class="bottom__link">Виставки та події</a>
+                  </li>
+                  <li>
+                    <a href="#" class="bottom__link">Відвідування</a>
+                  </li>
+                  <li>
+                    <a href="#" class="bottom__link">Стати нашим другом</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="bottom__nav-second">
+                <ul class="bottom__navlist">
+                  <li class="bottom__navitem">
+                    <a href="#" class="bottom__link">Про нас</a>
+                  </li>
+                  <li>
+                    <a href="#" class="bottom__link">Магазин</a>
+                  </li>
+                  <li>
+                    <a href="#" class="bottom__link">Блог</a>
+                  </li>
+                  <li>
+                    <a href="#" class="bottom__link">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="bottom__line"></div>
+
+            <div class="bottom__second-block">
+              <div class="bottom__shedule">
+                <p class="bottom__text">
+                  Графік роботи:
+                  <br><br>
+                  <strong>12:00 — 20:00</strong> середа<br>
+                  <strong>12:00 — 20:00</strong> четвер<br>
+                  <strong>12:00 — 20:00</strong> п’ятниця<br>
+                  <strong>11:00 — 19:00</strong> субота<br>
+                  <strong>11:00 — 19:00</strong> неділя<br>
+                  <br>
+                  вихідні понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину<br>
+                  до закриття музею
+                </p>
+              </div>
+              <div class="bottom__contacts">
+                <p class="bottom__text">
+                  Контакти: <br>
+                  <br>
+                  вул. М. Грушевського, 6; Київ, 01001<br>
+                  тел. +38 (044) 278-13-57<br>
+                  факс +38 (044) 278-74-54<br>
+                  e-mail: info@namu.kiev.ua<br>
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="menu__full-bottom">
+            <p class="menu__terms bottom__text-first">
+              © 2010 — 2020
+            </p>
+            <p class="menu__terms">
+              Privacy — Terms
+            </p>
+          </div>
+        </div>
+      </div>
+      <img src="./images/NAMU.png"
+        alt="namu"
+        class="header__main-logo">
+
+      <div class="header__main">
+        <h3 class="header__title">Художній<br>музей</h3>
+        <img src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+          alt="museum-photo"
+          class="header__photo">
+        <img src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200 smaller.png"
+          alt="museum-photo"
+          class="header__photo-smaller">
+        <div class="header__button">
+          <button class="header__buy-tickets">квитки</button><!--
+          --><button class="header__buy-arrow">→</button>
+        </div>
+      </div>
+
+      <h3 class="header__title-mobile">Художній<br>музей</h3>
+      <div class="header__button-mobile">
+        <button class="header__buy-tickets">квитки</button><!--
+        --><button class="header__buy-arrow">→</button>
+      </div>
+
+      <a href="#" class="header__events">Події</a>
+    </header>
+
   </body>
 </html>
